--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,117 @@
-HELP.md
+# ========================
+# 通用系统/工具文件
+# ========================
+# macOS 系统文件
+.DS_Store
+# Windows 缩略图缓存
+Thumbs.db
+# 临时文件
+*.tmp
+*.log
+*.swp
+*.swo
+*.swn
+*~                         # Vim/Emacs 备份文件
+
+# ========================
+# 编译产物
+# ========================
+**/*.class
+**/*.jar
+**/*.war
+**/*.ear
+
+# ========================
+# 构建工具生成产物
+# ========================
+# Maven
 target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Gradle
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+.gradle/
+# Wrapper 脚本
+mvnw
+mvnw.cmd
+gradlew
+gradlew.bat
+# IDE 模块文件
+*.iml
 
-### VS Code ###
+# ========================
+# IDE 相关
+# ========================
+# IntelliJ IDEA
+.idea/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries/
+.idea/shelf/
+.idea/runConfigurations/
+*.iws
+*.ipr
+out/
+# Eclipse
+.settings/
+*.classpath
+*.project
+
+# ========================
+# 测试报告 & 覆盖率
+# ========================
+surefire-reports/
+failsafe-reports/
+jacoco.exec
+coverage/
+target/site/
+
+# ========================
+# 日志 & 临时目录
+# ========================
+logs/
+*.out
+hs_err_pid*.log
+uploads/
+downloads/
+
+# ========================
+# 敏感信息与环境配置
+# ========================
+*.properties
+*.properties.bak
+*.yml
+.env
+.env.*
+*.pem
+*.key
+settings.xml
+logback-spring-local.xml
+log4j2-local.xml
+
+# ========================
+# 前端/静态资源相关
+# ========================
+node_modules/
+dist/
+.webpack/
+.cache/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.yarn/
 .vscode/
+
+# ========================
+# Docker & 容器相关
+# ========================
+docker-compose.override.yml
+*.tar
+
+# ========================
+# Kubernetes、本地部署等
+# ========================
+*.yaml
+
+# ========================
+# 自定义临时目录
+# ========================
+temp/
