--- a/xgmall-repository/pom.xml
+++ b/xgmall-repository/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.xlx</groupId>
-        <artifactId>xgmall</artifactId>
+        <artifactId>xgmall-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -15,6 +15,9 @@
     <name>xgmall-repository</name>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.xlx</groupId>
+            <artifactId>xgmall-entity</artifactId>
+        </dependency>
     </dependencies>
 </project>
